--- a/templates/FrontOffice/training/animations.html.twig
+++ b/templates/FrontOffice/training/animations.html.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Animations
 {% endblock %}
-
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('assets/styles/FrontOffice/animations.css') }}">
+{% endblock %}
 {% block main %}
 
 	<main>
