--- a/templates/FrontOffice/training/index.html.twig
+++ b/templates/FrontOffice/training/index.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Cours & Ateliers{% endblock %}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('assets/styles/FrontOffice/training.css') }}">
+{% endblock %}
 
 {% block main %}
 <main>
