--- a/templates/FrontOffice/training/lessons.html.twig
+++ b/templates/FrontOffice/training/lessons.html.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Cours
 {% endblock %}
-
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('assets/styles/FrontOffice/lessons.css') }}">
+{% endblock %}
 {% block main %}
 
 <main>
