--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,5 +21,6 @@
 	<body>
 	 {% block header %}{% include "header.html.twig"%}{% endblock %}
 		{% block main %}{% endblock %}
+		{% block footer %}{% include "footer.html.twig"%}{% endblock %}
 	</body>
 </html>
