--- a/templates/FrontOffice/home.html.twig
+++ b/templates/FrontOffice/home.html.twig
@@ -1,20 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Accueil{% endblock %}
-
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('assets/styles/FrontOffice/home.css') }}">
+{% endblock %}
 {% block main %}
-<main>
-<div >
+<main class="main-home">
+
     <img src="{{ asset('assets/img/ilustrationCedenia.jpg') }}" alt="avatar">
+
+    <div class="presentation">
     <h1 >Bienvenue sur Innae</h1>
 
     <p>Cédénïa , couturière/Chapellière vous propose de plonger dans son univer doux et coloré avec des créations sur mesure , des ateliers colllectif  d’initiation à la couture et broderie pour les enfants et ado agée de 7 à 17ans , mais aussi  des cours particulier tout âge à partir de 7ans. 
-Vous pouvez également la retrouvée lors de divers événements dans la region Rhone ALpe et PACA principalement et prochainement dans d’autres.</p>
+Vous pouvez également la retrouvée lors de divers événements dans la region Rhone ALpe et PACA principalement et prochainement dans d’autres.
+    </p>
 
+    </div>
+    
     <div >
         <a href="{{ path('app_order_public') }}" class="btn btn-primary me-2">Commander</a>
         <a href="{{ path('app_contact_public') }}" class="btn btn-secondary">Nous contacter</a>
     </div>
-</div>
+
 </main>
 {% endblock %}
