--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,33 +1,38 @@
 <header>
-<div class="logo">
-    <a href="{{ path('app_home') }}">
-        <img src="{{ asset('assets/img/logo.PNG') }}" alt="logo Innae">
-    </a>
-</div>
+    <div class="logo">
+        <a href="{{ path('app_home') }}">
+            <img src="{{ asset('assets/img/logo.PNG') }}" alt="logo Innae">
+        </a>
+    </div>
 
-	<nav>
-		<ul class="listNav">
-			<li class="liNav">
-				<a href="{{ path('app_event_public') }}">
-					Event</a>
-			</li>
-			<li class="liNav">
-				<a href="{{ path('app_order_public') }}">
-					Bêret Personnalisé</a>
-			</li>
-			<li class="liNav">
-			               <a href="{{ path('app_training_index') }}">Cours/Ateliers</a> 
-			            </li>
-			<li class="liNav">
-				<a href="{{ path('app_contact_public') }}">Contact</a>
-			</li>
-			<li class="liNav login-link">
-				<a href="{{ path('app_login') }}">
-					<iconify-icon icon="streamline-freehand:login-rectangle" width="32" height="32"></iconify-icon>
-				</a>
-			</li>
-
-		</ul>
-
-	</nav>
+    <nav>
+        <ul class="listNav">
+            <li class="liNav">
+                <a href="{{ path('app_event_public') }}">Event</a>
+            </li>
+            <li class="liNav">
+                <a href="{{ path('app_order_public') }}">Bêret Personnalisé</a>
+            </li>
+            <li class="liNav">
+                <a href="{{ path('app_training_index') }}">Cours/Ateliers</a> 
+            </li>
+            <li class="liNav">
+                <a href="{{ path('app_contact_public') }}">Contact</a>
+            </li>
+            
+            <li class="liNav login-link">
+                {% if app.user and is_granted('ROLE_ADMIN') %}
+                    
+                    <a href="{{ path('backoffice_dashboard') }}">
+                        <img src="{{ asset('assets/img/ilustrationCedenia.jpg') }}" alt="Admin Avatar" class="avatar">
+                    </a>
+                {% else %}
+                    
+                    <a href="{{ path('app_login') }}">
+                        <iconify-icon icon="streamline-freehand:login-rectangle" width="32" height="32"></iconify-icon>
+                    </a>
+                {% endif %}
+            </li>
+        </ul>
+    </nav>
 </header>
