fifht commit mise à jour avant derniere version

--- a/templates/BackOffice/admin/dashboard.html.twig
+++ b/templates/BackOffice/admin/dashboard.html.twig
@@ -15,8 +15,8 @@
         <nav class="admin-links">
             <ul>
                 <li><a href="{{ path('backoffice_order_index') }}">Bérets</a></li>
-                <li><a href="{{ path('app_event_index') }}">Événements</a></li>
                 <li><a href="{{ path('backoffice_contact_index') }}">Messages Contact</a></li>
+                <li><a href="{{ path('app_logout') }}" class="logout-btn">Déconnexion</a></li>
             </ul>
         </nav>
     </aside>
