chore: update uppercase image name

--- a/templates/FrontOffice/home.html.twig
+++ b/templates/FrontOffice/home.html.twig
@@ -24,9 +24,9 @@
 		</div>
 		<div class="carousel">
 			<div class="carousel-track">
-				<div class="carousel-slide"><img src="{{ asset('assets/img/BeretChampignon.JPEG') }}" alt="Slide 1"></div>
-				<div class="carousel-slide"><img src="{{ asset('assets/img/BeretGrenouille.JPEG') }}" alt="Slide 2"></div>
-				<div class="carousel-slide"><img src="{{ asset('assets/img/BeretRenard.JPEG') }}" alt="Slide 3"></div>
+				<div class="carousel-slide"><img src="{{ asset('assets/img/BeretChampignon.jpeg') }}" alt="Slide 1"></div>
+				<div class="carousel-slide"><img src="{{ asset('assets/img/BeretGrenouille.jpeg') }}" alt="Slide 2"></div>
+				<div class="carousel-slide"><img src="{{ asset('assets/img/BeretRenard.jpeg') }}" alt="Slide 3"></div>
 				<div class="carousel-slide"><img src="{{ asset('assets/img/ashley-diane-worsham-k8WsZMKAafQ-unsplash.jpg') }}" alt="Slide 4"></div>
 				<div class="carousel-slide"><img src="{{ asset('assets/img/debby-hudson-d9gDYKSfU6M-unsplash.jpg') }}" alt="Slide 5"></div>
 			</div>
