--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 	<div class="footer-container">
 		<div class="footer-logo">
-			<img src="{{ asset('assets/img/logo.PNG') }}" alt="logo Innae">
+			<img src="{{ asset('assets/img/logo.png') }}" alt="logo Innae">
 		</div>
 		<div class="footer-links">
 			<a href="{{ path('app_home') }}">Accueil</a>
