--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,7 +1,7 @@
 <header>
     <div class="logo">
         <a href="{{ path('app_home') }}">
-            <img src="{{ asset('assets/img/logo.PNG') }}" alt="logo Innae">
+            <img src="{{ asset('assets/img/logo.png') }}" alt="logo Innae">
         </a>
     </div>
 
