--- a/templates/FrontOffice/contact_public/index.html.twig
+++ b/templates/FrontOffice/contact_public/index.html.twig
@@ -1,25 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Contact
+{% endblock %}
 {% block stylesheets %}
-	<link rel="stylesheet" href="{{ asset('assets/styles/FrontOffice/contact.css') }}">
+	<link rel="stylesheet" href="{{ asset('styles/FrontOffice/contact.css') }}">
 {% endblock %}
 {% block main %}
 
-<main class="main-contact">
-  <img src="{{ asset('assets/img/ilustrationCedenia.jpg') }}" alt="avatar">
-  
-  <h1>Formulaire de contact</h1>
-{% for message in app.flashes('success') %}
-    <div class="alert alert-success">{{ message }}</div>
-{% endfor %}
+	<main class="main-contact">
+		<img src="{{ asset('img/ilustrationCedenia.jpg') }}" alt="avatar">
 
-{{ form_start(form) }}
-    {{ form_row(form.name) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.message) }}
-    <button type="submit">Envoyer</button>
-{{ form_end(form) }}
+		<h1>Formulaire de contact</h1>
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success">{{ message }}</div>
+		{% endfor %}
 
-</main>
+		{{ form_start(form) }}
+		{{ form_row(form.name) }}
+		{{ form_row(form.email) }}
+		{{ form_row(form.message) }}
+		<button type="submit">Envoyer</button>
+		{{ form_end(form) }}
+
+	</main>
 {% endblock %}
