--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
 		<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-
+		<link rel="stylesheet" href="{{ asset('styles/app.css') }}">
 		{% block javascripts %}
 			{% block importmap %}
 				{{ importmap('app') }}
@@ -19,8 +19,12 @@
 		{% endblock %}
 	</head>
 	<body>
-	 {% block header %}{% include "header.html.twig"%}{% endblock %}
+		{% block header %}
+			{% include "header.html.twig"%}
+		{% endblock %}
 		{% block main %}{% endblock %}
-		{% block footer %}{% include "footer.html.twig"%}{% endblock %}
+		{% block footer %}
+			{% include "footer.html.twig"%}
+		{% endblock %}
 	</body>
 </html>
