--- a/templates/FrontOffice/contact_public/index.html.twig
+++ b/templates/FrontOffice/contact_public/index.html.twig
@@ -8,7 +8,7 @@
 {% block main %}
 
 	<main class="main-contact">
-		<img src="{{ asset('img/ilustrationCedenia.jpg') }}" alt="avatar">
+		<img src="{{ asset('img/IlustrationCedenia.jpg') }}" alt="avatar">
 
 		<h1>Formulaire de contact</h1>
 		{% for message in app.flashes('success') %}
