--- a/templates/FrontOffice/home.html.twig
+++ b/templates/FrontOffice/home.html.twig
@@ -11,13 +11,13 @@
 {% block main %}
 	<main class="main-home">
 
-		<img src="{{ asset('img/ilustrationCedenia.jpg') }}" alt="avatar">
+		<img src="{{ asset('img/IlustrationCedenia.jpg') }}" alt="avatar">
 
 		<div class="presentation">
 			<h1>Bienvenue sur Innae</h1>
 
 			<p>Cédénïa , couturière/Chapellière vous propose de plonger dans son univer doux et coloré avec des créations sur mesure , des ateliers colllectif  d’initiation à la couture et broderie pour les enfants et ado agée de 7 à 17ans , mais aussi  des cours particulier tout âge à partir de 7ans. 
-								Vous pouvez également la retrouvée lors de divers événements dans la region Rhone ALpe et PACA principalement et prochainement dans d’autres.
+												Vous pouvez également la retrouvée lors de divers événements dans la region Rhone ALpe et PACA principalement et prochainement dans d’autres.
 			</p>
 
 		</div>
