--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -21,7 +21,7 @@
 				{% if app.user and is_granted('ROLE_ADMIN') %}
 
 					<a href="{{ path('backoffice_dashboard') }}">
-						<img src="{{ asset('img/ilustrationCedenia.jpg') }}" alt="Admin Avatar" class="avatar">
+						<img src="{{ asset('img/IlustrationCedenia.jpg') }}" alt="Admin Avatar" class="avatar">
 					</a>
 				{% else %}
 
