--- a/templates/BackOffice/admin/dashboard.html.twig
+++ b/templates/BackOffice/admin/dashboard.html.twig
@@ -27,7 +27,7 @@
 				<h2>Bienvenue,
 					{{ app.user.username }}
 					!</h2>
-				<p>Sur ton espace de gestion, tu peux accéder aux commandes, événements et messages de contact.</p>
+				<p>Sur ton espace de gestion, tu peux accéder aux commandes,ta note et messages de contact.</p>
 			</section>
 
 			<section class="todo-panel">
