--- a/templates/FrontOffice/home.html.twig
+++ b/templates/FrontOffice/home.html.twig
@@ -4,9 +4,11 @@
 {% endblock %}
 {% block stylesheets %}
 	<link rel="stylesheet" href="{{ asset('styles/FrontOffice/home.css') }}">
+
+{% endblock %}
+{% block javascripts %}
 	<script src="{{ asset('home.js') }}"></script>
 {% endblock %}
-
 
 {% block main %}
 	<main class="main-home">
@@ -16,8 +18,9 @@
 		<div class="presentation">
 			<h1>Bienvenue sur Innae</h1>
 
+
 			<p>Cédénïa , couturière/Chapellière vous propose de plonger dans son univer doux et coloré avec des créations sur mesure , des ateliers colllectif  d’initiation à la couture et broderie pour les enfants et ado agée de 7 à 17ans , mais aussi  des cours particulier tout âge à partir de 7ans. 
-												Vous pouvez également la retrouvée lors de divers événements dans la region Rhone ALpe et PACA principalement et prochainement dans d’autres.
+																Vous pouvez également la retrouvée lors de divers événements dans la region Rhone ALpe et PACA principalement et prochainement dans d’autres.
 			</p>
 
 		</div>
