--- a/assets/styles/FrontOffice/login.css
+++ b/assets/styles/FrontOffice/login.css
@@ -88,3 +88,35 @@
     color: var(--primary-color);
     border: 2px solid var(--primary-color);
 }
+
+@media screen and (max-width: 768px) {
+
+  .main-login h1 {
+    font-size: 2.4rem;
+  }
+
+  .main-login .alert {
+    font-size: 1.2rem;
+    padding: 16px 22px;
+  }
+
+  .main-login form {
+    max-width: 420px; /* même largeur que desktop */
+    padding: 40px;
+    gap: 24px;
+  }
+
+  .main-login form label {
+    font-size: 1.2rem;
+  }
+
+  .main-login form input {
+    font-size: 1.25rem;
+    padding: 18px 20px;
+  }
+
+  .main-login form button {
+    font-size: 1.25rem;
+    padding: 16px 28px;
+  }
+}
